select.result, select.test:   Added test cases for bug #6474. sql_select.cc:   Fixed bug #6474. A wrong result was returned when a query   contained the same equality of the form field=const on   different AND levels.

sql/sql_select.cc:
  Fixed bug #6474. A wrong result was returned when a query
  contained the same equality of the form field=const on
  different AND levels.
mysql-test/t/select.test:
  Added test cases for bug #6474.
mysql-test/r/select.result:
  Added test cases for bug #6474.